[gd_scene load_steps=9 format=2]

[ext_resource path="res://godot/animations/Sparkle3.tres" type="SpriteFrames" id=1]
[ext_resource path="res://godot/animations/Sparkle1.tres" type="SpriteFrames" id=2]
[ext_resource path="res://godot/animations/Sparkle2.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/tools/axe.png" type="Texture" id=4]
[ext_resource path="res://scripts/tools/Tool.gd" type="Script" id=5]
[ext_resource path="res://audio/music/drumnbass.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sounds/rough.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Tool" type="Area2D"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="AnimatedSprite_Sparkle1" type="AnimatedSprite" parent="."]
position = Vector2( -2, 2 )
frames = ExtResource( 2 )
frame = 15
playing = true

[node name="AnimatedSprite_Sparkle2" type="AnimatedSprite" parent="."]
position = Vector2( 1, -2 )
frames = ExtResource( 3 )
frame = 23
playing = true

[node name="AnimatedSprite_Sparkle3" type="AnimatedSprite" parent="."]
position = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 16
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
max_distance = 80.0
attenuation = 2.07053
bus = "Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
bus = "Music"

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
